# kursinis_benchmark

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/include/: workload.hpp
benchmarks/include/rxcpp/: rx.hpp
benchmarks/results/: latest_results.json
benchmarks/scripts/: collect_metrics.py
benchmarks/src/: latency.cpp  resource.cpp  throughput.cpp
docs/: benchmarks.md
